--- a/filebeat.yml
+++ b/filebeat.yml
@@ -13,6 +13,7 @@ filebeat.prospectors:
   document_type: kube-logs
   fields:
     host: ${FILEBEAT_HOST:${HOSTNAME}}
+    k8s-cluster: ${K8S_CLUSTER}
   fields_under_root: true
 
 output.logstash:
