--- a/filebeat.yml
+++ b/filebeat.yml
@@ -13,7 +13,7 @@ filebeat.prospectors:
   document_type: kube-logs
   fields:
     host: ${FILEBEAT_HOST:${HOSTNAME}}
-    cluster_name: ${K8S_CLUSTER:default}
+    cluster_name: ${CLUSTER_NAME:default}
   fields_under_root: true
 
 output.logstash:
